...
    <string name="clipboard_tool_paste">Paste</string>
    <string name="clipboard_tool_copy">Copy</string>
    <string name="clipboard_tool_cut">Cut</string>

    <string name="stickers">Stickers</string>
    <string name="dialog_import_image_title" translatable="false">@string/button_import_image</string>
    <string name="dialog_save_image_title" translatable="false">@string/menu_save_image</string>
    <string name="dialog_save_project_title" translatable="false">@string/menu_save_project</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_error_save_title">Error load/save file</string>
    <string name="dialog_error_sdcard_text">Check image or SD-card!</string>
    <string name="dialog_brush_width_text">Stroke width</string>
    <string name="dialog_warning_new_image">Save changes?</string>
    <string name="help_title">Help</string>
    <string name="help_content_eraser">Remove parts of the image like with an eraser.</string>
    <string name="help_content_brush">Tap on the symbols on the bottom bar to change the color or the brush size.</string>
    <string name="help_content_watercolor">Similar to the brush tool with a watercolor effect. However you can also change the strength of the brush with the slider in the color menu.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
...
    <string name="help_content_hand">Move your finger to move the canvas.</string>
    <string name="help_content_spray_can">Move your finger on the image to create a spray can pattern.</string>
    <string name="help_content_smudge">Move your finger on the image on different drawings to smudge them.</string>
    <string name="help_content_clip">Mark area which should not be erased.</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save changes?</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_discard_image">Discard image</string>
    <string name="no_longclick_on_hidden_layer">You are only able to merge or reorder if all layers are visible</string>
    <string name="no_tools_on_hidden_layer">No tools are available on hidden layer</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_replace_image">Replace image</string>
    <string name="menu_add_to_current_layer">Add to current layer</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_save_project">Save project</string>
    <string name="menu_hide_menu">Hide buttons</string>
    <string name="share_image_menu">Share image</string>
    <string name="share_image_via_text">Send image via</string>
    <string name="pocketpaint_menu_about" translatable="false">@string/pocketpaint_about_title</string>
    <string name="menu_rate_us">Rate us!</string>
...
    <string name="menu_advanced">Advanced settings</string>
    <string name="menu_zoom_settings">Zoom window settings</string>
    <string name="saved_to">Image saved to\n</string>
    <string name="saved">Image saved</string>
    <string name="copy_to">Copy saved to\n</string>
    <string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="overwrite_button_text">Overwrite</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_cannot_resize_to_this_size">cannot resize to this size</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

    <string name="text_tool_dialog_underline_shortcut">U</string>
...
    <string name="pocketpaint_overwrite">You are about to overwrite an existing image (hint: To save it as a new image, use the \"%s\" option). Save anyway?</string>

    <string name="pocketpaint_like_us">Do you like Pocket Paint?</string>
    <string name="pocketpaint_rate_us">Would you like to rate Pocket Paint?</string>
    <string name="pocketpaint_feedback">We are sorry to hear that. If you want to share your experience with us, please write to contact@catrobat.org</string>
    <string name="pocketpaint_yes">Yes</string>
    <string name="pocketpaint_no">No</string>
    <string name="pocketpaint_ok"  translatable="false">@android:string/ok</string>
    <string name="pocketpaint_cancel">Cancel</string>
    <string name="pocketpaint_not_now">Not now</string>
    <string name="pocketpaint_rate_us_title">Rate Pocket Paint</string>

    <string name="bottom_navigation_tools">Tools</string>
    <string name="bottom_navigation_current">Current</string>
...
